Updates images file and index.html
to point to new image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="images\me_small_circle2.png" alt="me">
+        <img src="me_small_circle2.png" alt="me">
       </td>
       <td>
         <h1>Chris Ibe-Ekeocha</h1>
